@startuml
allowmixing
skinparam classFontName Courier
skinparam classFontSize 12
'skinparam linetype ortho

top to bottom direction

package RocketControl {
    class ControlLayer {
        +ControlLayer()
        +void OnInit()
        +void OnUpdate(float deltaTime)
        +void OnEvent(Core::Event &event)
        +void OnRender()

        +void FindRocket(Core::Event &event)
        +RocketObject* GetRocketObject() const
        +AutonomousPIDRocketController* GetAutoControl() const

        +bool manualControlEnabled

        -void CreateRocket(Scene *scene)
        -std::unique_ptr<ManualRocketController> userControl_
        -std::unique_ptr<AutonomousPIDRocketController> autonomousControl_
        -RocketObject* rocketObj_
        -EngineLayer* engine_
    }

    AppLayer <|-- ControlLayer

    ControlLayer "1" o-- "0..1" RocketObject : references rocketObj_


    class RocketObject {
        +explicit RocketObject(Scene& scene)

        +float thrustPercent
        +float thrustAngle

        -SceneObject* nozzleObj_
        -SceneObject* exhaustObj_
        -ShaderUniforms* exhaustShaderData_
        -unique_ptr<ma_sound> rocketSound_

        +void UpdateVisualisation() const
        +vec2 GetThrustPosition() const
        +vec2 GetThrustVector() const

        +float GetMaxThrustAngle() const
        +float GetInertia() const

        +void RelinkObjects(const Scene& scene)
        +void serialize(Archive& ar)

        +void StartSound()
        +void StopSound()
    }

    SceneObject <|-- RocketObject


    class TargetObject {
        +TargetObject()

        +void serialize(Archive& ar)

        +void MarkReached()
        +bool IsReached() const

        +static float reachRadius
        +static float reachTime

        -void PlayCompletionEffect() const
        -bool reached_
    }

    SceneObject <|-- TargetObject


    package Controllers {
        interface IRocketController {
            +virtual void ApplyControlInputs(RocketObject *rocketObj, float deltaTime) const = 0
        }

        ControlLayer ..> IRocketController : uses (strategy)


        class ManualRocketController {
            +OnKeyPressed(int keyCode)
            +OnKeyReleased(int keyCode)
            +void ApplyControlInputs(RocketObject *rocketObj, float deltaTime) const
        }

        IRocketController <|-- ManualRocketController : implements

        ManualRocketController o-- RocketObject : controls


        class AutonomousPIDRocketController {
            +void Start() const
            +void ApplyControlInputs(RocketObject* rocketObj, float deltaTime) const
            +void SetActiveTarget(TargetObject* target, function<void()> targetReachedCallback)

            +void CheckTargetReached(const RocketObject *rocketObject, float dt)

            +float maxSteeringAngle

            +function<void()> targetReachedCallback_
            +vec2 currentTargetPos_ = vec2(0.0f)

            -float ReachedTimer_
        }

        IRocketController <|-- AutonomousPIDRocketController : implements

        AutonomousPIDRocketController o-- RocketObject : controls
        AutonomousPIDRocketController o-- TargetObject : tracks
    }


    package PID {
        class PIDData {
            +PIDData(float p, float i, float d, float b)

            +float pGain
            +float iGain
            +float dGain
            +float bias
            +string name

            +void serialize(Archive& ar)
        }

        class PIDController {
            +explicit PIDController(const PIDData &data)

            +PIDData pidData

            +float Evaluate(float setpoint, float measuredValue, float derivative, float deltaTime)
            +void SetUseAngleDifference(bool useAngleDifference)
            +vec4 GetTerms() const
            +void Reset()

            -bool useAngleDifference_
            -float integral_
            -float pTerm_
            -float iTerm_
            -float dTerm_
            -float biasTerm_
        }

        class PIDConfig {
            +explicit PIDConfig(const array<PIDData,3>& data, float steeringAngle)

            +const PIDData& GetPIDData(int index) const
            +float GetSteeringAngle() const
            +void serialize(Archive& ar)

            -array<PIDData,3> pidData_
            -float steeringAngle_
        }

        class PIDVisualizer {
            +static void PushArrow(vector<unique_ptr<SceneObject::DebugArrow>>& arrows, vec2 origin, vec2 dir, vec4 color, bool dashed=false, bool hasArrow=true)
            +static void DrawPIDArrows(vector<unique_ptr<SceneObject::DebugArrow>>& arrows, vec2 origin, vec2 dir, vec4 terms, float scale=1.0f)

            +static void DrawVerticalArrows(SceneObject* rocketObject, vec4 terms)
            +static void DrawHorizontalArrows(SceneObject* rocketObject, vec4 terms, float targetAngle)
            +static void DrawAttitudeArrows(SceneObject* rocketObject, vec4 terms)
        }

        PIDController *-- PIDData : has
        PIDConfig "1" *-- "3" PIDData : stores

        PIDVisualizer ..> SceneObject : uses (debugArrows)
    }

    Controllers::AutonomousPIDRocketController "1" *-- "3" PID::PIDController : owns
    Controllers::AutonomousPIDRocketController ..> PID::PIDVisualizer : uses (visualize)


    package UI {
        class RocketControllerUI {
            +void Draw()
            +void OnEvent(Core::Event &event)

            -ControlLayer* controlLayer_
            -EngineLayer* engineLayer_
            -PIDController* activePID
            -TargetUI targetUI_
            -FileSelector pidFileSelector_
            -string saveName

            -void DrawPIDSettings(AutonomousPIDRocketController *autoCtrl)
            -void DrawPIDLoading(PIDController *(&pids)[3], float &steeringAngle)
            -void SaveConfig(const AutonomousPIDRocketController *autoCtrl) const
        }

        IUserInterface <|-- RocketControllerUI : implements

        RocketControllerUI *-- TargetUI : has



        class RocketStateUI {
            +void OnEvent(Core::Event &event)
            +void RecordHistory(RocketObject *rocketObj
            +float rocketVelocityRel, float rocketPosRel)
            +void Draw()

            -ControlLayer* controlLayer_
            -EngineLayer* engineLayer_
        }

        IUserInterface <|-- RocketStateUI : implements


        class TargetUI {
            +void Draw(Scene *scene)
            +void OnSceneLoaded(const Scene& scene, RocketObject* rocket, AutonomousPIDRocketController* autoCtrl)

            -void SyncTargetsFromScene(const Scene& scene)
            -void CreateTarget(Scene& scene)
            -void DeleteTargetAt(Scene& scene, int index)

            -void DrawCreateButtons(Scene& scene)
            -static void DrawReachParams()
            -void DrawTargetsList(Scene& scene)
            -static bool DrawFloat2Control(const char* label, glm::vec2* v, float speed = 0.1f)
            -void SetNextTarget()

            -vector<TargetObject*> targets_
            -vec2 spawnDefaultPos_
            -RocketObject* cachedRocket_
            -AutonomousPIDRocketController* autoCtrl_
        }

        TargetUI o-- TargetObject : references (Scene owns)
        TargetUI o-- RocketObject : caches
        TargetUI o-- Controllers::AutonomousPIDRocketController : controls
    }
}
@enduml